update script variable names and path to gatb-core bin bundles

--- a/gatb-core/test/jenkins/test-bin-macos-10.9.5-gcc-4.2.1
+++ b/gatb-core/test/jenkins/test-bin-macos-10.9.5-gcc-4.2.1
@@ -16,7 +16,7 @@ pwd       : `pwd`
 --------------------------
 Jenkins build parameters
 --------------------------
-BRANCH_TO_BUILD      : ${BRANCH_TO_BUILD}
+VERSION_TO_TEST      : ${VERSION_TO_TEST}
 INRIA_FORGE_LOGIN    : ${INRIA_FORGE_LOGIN}
 DO_NOT_STOP_AT_ERROR : ${DO_NOT_STOP_AT_ERROR}
 "
@@ -56,7 +56,7 @@ cd $BUILD_DIR
 # Upload bin bundle to the forge; source bundle is made by OSX Jenkins task
 if [ $? -eq 0 ] && [ "$INRIA_FORGE_LOGIN" != none ] && [ "$DO_NOT_STOP_AT_ERROR" != true ]; then
    echo "Getting a binary archive... "
-   scp ${INRIA_FORGE_LOGIN}@scm.gforge.inria.fr:/home/groups/gatb-core/htdocs/ci-inria/gatb-core-${BRANCH_TO_BUILD}-bin-Darwin.tar.gz .
+   scp ${INRIA_FORGE_LOGIN}@scm.gforge.inria.fr:/home/groups/gatb-core/htdocs/versions/bin/gatb-core-${VERSION_TO_TEST}-bin-Darwin.tar.gz .
 fi
 
 ################################################################
@@ -67,9 +67,9 @@ g++ --version
 
 [ `gcc -dumpversion` = 4.2.1 ] && { echo "GCC 4.2.1"; } || { echo "GCC version is not 4.2.1, we exit"; exit 1; }
 
-gunzip gatb-core-${BRANCH_TO_BUILD}-bin-Darwin.tar.gz
-tar -xf gatb-core-${BRANCH_TO_BUILD}-bin-Darwin.tar
-cd gatb-core-${BRANCH_TO_BUILD}-bin-Darwin
+gunzip gatb-core-${VERSION_TO_TEST}-bin-Darwin.tar.gz
+tar -xf gatb-core-${VERSION_TO_TEST}-bin-Darwin.tar
+cd gatb-core-${VERSION_TO_TEST}-bin-Darwin
 
 code_snippets=($(find ./examples -name "*1.cpp"))
 for code_snippet in ${code_snippets[*]}
@@ -80,5 +80,5 @@ done
 
 # do some cleanup to save disk space
 cd ..
-rm -rf gatb-core-${BRANCH_TO_BUILD}-bin-Darwin*
+rm -rf gatb-core-${VERSION_TO_TEST}-bin-Darwin*
 
